--- a/package.xml
+++ b/package.xml
@@ -13,10 +13,10 @@
   <email>rsky0711@gmail.com</email>
   <active>yes</active>
  </lead>
- <date>2010-06-21</date>
- <time>13:47:26</time>
+ <date>2010-10-13</date>
+ <time>08:31:27</time>
  <version>
-  <release>0.4.1</release>
+  <release>0.4.2</release>
   <api>0.4.0</api>
  </version>
  <stability>
@@ -25,7 +25,8 @@
  </stability>
  <license uri="http://www.opensource.org/licenses/mit-license.php">MIT License</license>
  <notes>
-- Initial release on PEAR channel.
+- Fixed using non-existant API function tcbdbxmsiz()
+  and removed method TCBDB::xmsiz()
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -75,15 +76,15 @@
    <file baseinstalldir="/" md5sum="2c1b22f005b1947f2257f7106482db67" name="CREDITS" role="doc" />
    <file baseinstalldir="/" md5sum="7291f1b05a4608bc9223993fd2bea6c2" name="EXPERIMENTAL" role="doc" />
    <file baseinstalldir="/" md5sum="cf40ac5fa27cc3ba0d44c44a455f9b64" name="LICENSE" role="doc" />
-   <file baseinstalldir="/" md5sum="52bc3aa05e41d1a2e83ef550b407a8bc" name="php_tokyocabinet.h" role="src" />
+   <file baseinstalldir="/" md5sum="9203a693c5596c1133659a3f52ea7027" name="php_tokyocabinet.h" role="src" />
    <file baseinstalldir="/" md5sum="a31732815d09acfbc80c5d1c712d6e30" name="ptc_abstract.c" role="src" />
    <file baseinstalldir="/" md5sum="f0e88081a8b15228d517852d1be0756c" name="ptc_abstract.h" role="src" />
-   <file baseinstalldir="/" md5sum="69a1e8e71b333950a07177ffc70ad359" name="ptc_bdb.c" role="src" />
+   <file baseinstalldir="/" md5sum="cdc34d64de1fd7656a21f81f19907a86" name="ptc_bdb.c" role="src" />
    <file baseinstalldir="/" md5sum="9691de2507ae92897be483af6b310455" name="ptc_compat.c" role="src" />
-   <file baseinstalldir="/" md5sum="82bd0abf3e8d3804a02288c0318ba230" name="ptc_compat.h" role="src" />
+   <file baseinstalldir="/" md5sum="3868271bd2db920dea2f3411f96fe4f7" name="ptc_compat.h" role="src" />
    <file baseinstalldir="/" md5sum="f6001637c5dd482fc3b80eec586f10eb" name="ptc_exception.c" role="src" />
-   <file baseinstalldir="/" md5sum="614b966d4b5c25dfac17cb34324aadb3" name="ptc_fdb.c" role="src" />
-   <file baseinstalldir="/" md5sum="05adb92101c3850798a79a49e019d605" name="ptc_hdb.c" role="src" />
+   <file baseinstalldir="/" md5sum="071f4fecf158c7b826ae0fe5626044ff" name="ptc_fdb.c" role="src" />
+   <file baseinstalldir="/" md5sum="fa9a4205590e88388868b880d935669d" name="ptc_hdb.c" role="src" />
    <file baseinstalldir="/" md5sum="103f0b498fe9f7ed45c1120c282a6c8b" name="ptc_idb.c" role="src" />
    <file baseinstalldir="/" md5sum="45c616936223519e31be3d1070412c0d" name="ptc_jdb.c" role="src" />
    <file baseinstalldir="/" md5sum="4c7d4064f01f27768cdcccf274a9c272" name="ptc_rdb.c" role="src" />
@@ -118,6 +119,22 @@
    <license uri="http://www.opensource.org/licenses/mit-license.php">MIT License</license>
    <notes>
 - Initial release on PEAR channel.
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>0.4.2</release>
+    <api>0.4.0</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <date>2010-10-13</date>
+   <license uri="http://www.opensource.org/licenses/mit-license.php">MIT License</license>
+   <notes>
+- Fixed using non-existant API function tcbdbxmsiz()
+  and removed method TCBDB::xmsiz()
    </notes>
   </release>
  </changelog>
